<resources>
    <string name="app_name">Kotogram</string>
    <string name="group_create">Создать группу</string>
    <string name="create_secret_chat">Создать секретный чат</string>
    <string name="create_chanel">Создать канал</string>
    <string name="contacts">Контакты</string>
    <string name="calls">Звонки</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="questions">Вопросы о Kotogram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Lahta Kot</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+7 9211111111</string>
    <string name="settings_label_phone_number">Нажмите чтобы изменить номер телефона</string>
    <string name="settings_default_login">Кот Василий</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_about_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о коте</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_sms">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_default">_ _ _ _ _ _</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">_____________________</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_input_bio">bio</string>

</resources>